packages/csharp/src/Kreuzberg/runtimes/osx-arm64/native/include/kreuzberg.h


typedef struct KREUZBERGChunkingConfig KREUZBERGChunkingConfig;
typedef struct KREUZBERGClassificationLabel KREUZBERGClassificationLabel;
typedef struct KREUZBERGContentFilterConfig KREUZBERGContentFilterConfig;
typedef struct KREUZBERGDiffOptions KREUZBERGDiffOptions;
typedef struct KREUZBERGDocumentStructure KREUZBERGDocumentStructure;
typedef struct KREUZBERGEmbeddingConfig KREUZBERGEmbeddingConfig;
typedef struct KREUZBERGEmbeddingPreset KREUZBERGEmbeddingPreset;
typedef struct KREUZBERGEntity KREUZBERGEntity;
typedef struct KREUZBERGExtractionConfig KREUZBERGExtractionConfig;
typedef struct KREUZBERGExtractionDiff KREUZBERGExtractionDiff;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLlmBackend KREUZBERGLlmBackend;
typedef struct KREUZBERGLlmConfig KREUZBERGLlmConfig;
typedef struct KREUZBERGMetadata KREUZBERGMetadata;
typedef struct KREUZBERGOcrExtractionResult KREUZBERGOcrExtractionResult;
typedef struct KREUZBERGPaddleOcrConfig KREUZBERGPaddleOcrConfig;
typedef struct KREUZBERGPageClassificationConfig KREUZBERGPageClassificationConfig;
typedef struct KREUZBERGRedactionConfig KREUZBERGRedactionConfig;
typedef struct KREUZBERGRegionKind KREUZBERGRegionKind;
typedef struct KREUZBERGRerankerConfig KREUZBERGRerankerConfig;
typedef struct KREUZBERGServerConfig KREUZBERGServerConfig;
typedef struct KREUZBERGTokenCounter KREUZBERGTokenCounter;
typedef struct KREUZBERGTranslationConfig KREUZBERGTranslationConfig;
KREUZBERGPageClassificationConfig *kreuzberg_page_classification_config_from_json(const char *json);
void kreuzberg_page_classification_config_free(KREUZBERGPageClassificationConfig *ptr);
char *kreuzberg_content_filter_config_to_json(const KREUZBERGContentFilterConfig *ptr);
void kreuzberg_content_filter_config_free(KREUZBERGContentFilterConfig *ptr);
KREUZBERGExtractionConfig *kreuzberg_extraction_config_from_json(const char *json);
char *kreuzberg_extraction_config_to_json(const KREUZBERGExtractionConfig *ptr);
void kreuzberg_extraction_config_free(KREUZBERGExtractionConfig *ptr);
KREUZBERGLlmConfig *kreuzberg_llm_config_from_json(const char *json);
void kreuzberg_llm_config_free(KREUZBERGLlmConfig *ptr);
char *kreuzberg_chunking_config_to_json(const KREUZBERGChunkingConfig *ptr);
void kreuzberg_chunking_config_free(KREUZBERGChunkingConfig *ptr);
KREUZBERGEmbeddingConfig *kreuzberg_embedding_config_from_json(const char *json);
char *kreuzberg_embedding_config_to_json(const KREUZBERGEmbeddingConfig *ptr);
void kreuzberg_embedding_config_free(KREUZBERGEmbeddingConfig *ptr);
KREUZBERGRedactionConfig *kreuzberg_redaction_config_from_json(const char *json);
void kreuzberg_redaction_config_free(KREUZBERGRedactionConfig *ptr);
KREUZBERGRerankerConfig *kreuzberg_reranker_config_from_json(const char *json);
void kreuzberg_reranker_config_free(KREUZBERGRerankerConfig *ptr);
KREUZBERGTranslationConfig *kreuzberg_translation_config_from_json(const char *json);
void kreuzberg_translation_config_free(KREUZBERGTranslationConfig *ptr);
KREUZBERGServerConfig *kreuzberg_server_config_from_json(const char *json);
void kreuzberg_server_config_free(KREUZBERGServerConfig *ptr);
void kreuzberg_llm_backend_free(KREUZBERGLlmBackend *ptr);
void kreuzberg_token_counter_free(KREUZBERGTokenCounter *ptr);
char *kreuzberg_classification_label_to_json(const KREUZBERGClassificationLabel *ptr);
void kreuzberg_classification_label_free(KREUZBERGClassificationLabel *ptr);
KREUZBERGDocumentStructure *kreuzberg_document_structure_from_json(const char *json);
char *kreuzberg_document_structure_to_json(const KREUZBERGDocumentStructure *ptr);
void kreuzberg_document_structure_free(KREUZBERGDocumentStructure *ptr);
char *kreuzberg_entity_to_json(const KREUZBERGEntity *ptr);
void kreuzberg_entity_free(KREUZBERGEntity *ptr);
KREUZBERGExtractionResult *kreuzberg_extraction_result_from_json(const char *json);
void kreuzberg_extraction_result_free(KREUZBERGExtractionResult *ptr);
KREUZBERGOcrExtractionResult *kreuzberg_ocr_extraction_result_from_json(const char *json);
void kreuzberg_ocr_extraction_result_free(KREUZBERGOcrExtractionResult *ptr);
KREUZBERGMetadata *kreuzberg_metadata_from_json(const char *json);
void kreuzberg_metadata_free(KREUZBERGMetadata *ptr);
KREUZBERGDiffOptions *kreuzberg_diff_options_from_json(const char *json);
char *kreuzberg_diff_options_to_json(const KREUZBERGDiffOptions *ptr);
void kreuzberg_diff_options_free(KREUZBERGDiffOptions *ptr);
char *kreuzberg_extraction_diff_to_json(const KREUZBERGExtractionDiff *ptr);
void kreuzberg_extraction_diff_free(KREUZBERGExtractionDiff *ptr);
char *kreuzberg_embedding_preset_to_json(const KREUZBERGEmbeddingPreset *ptr);
void kreuzberg_embedding_preset_free(KREUZBERGEmbeddingPreset *ptr);
KREUZBERGKeywordConfig *kreuzberg_keyword_config_from_json(const char *json);
void kreuzberg_keyword_config_free(KREUZBERGKeywordConfig *ptr);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_from_json(const char *json);
void kreuzberg_paddle_ocr_config_free(KREUZBERGPaddleOcrConfig *ptr);
KREUZBERGRegionKind *kreuzberg_region_kind_from_json(const char *json);
void kreuzberg_region_kind_free(KREUZBERGRegionKind *ptr);